--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
             <!-- Roue aléatoire -->
             <div class="margin-bottom margin-top margin-left">
-                <a onclick="createMultipleLines()"><img class="size roue_aleatoire" src="images/roue_des_couleurs.jpg" alt=""></a>
+                <a onclick="createMultipleLines()"><img class="size roue_aleatoire" src="images/roue.png" alt=""></a>
             </div>
             
         </div><!-- Zone droite -->
